# temporal-dbt-python

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  go.mod  pyproject.toml
example_workers/: start_worker.go
examples/: python_worker.py
examples/go/: go.mod  workflow.go  workflow_test.go
examples/go/worker/: start.go
src/: start_worker.go  start_worker.py
src/temporal_dbt_polyglot/: activity.go  workflow.go  workflow_test.go
src/temporal_dbt_python/: activites.py  activities.py  dbt_wrapper.py  dto.py  exceptions.py  workers.py  workflow.py
src/test/: test_dbt_functionality.py  test_temporal_functionality.py
temporal_dbt_go_polyglot/: workflow_test.go
temporal_dbt_python/: check.py  dbt_wrapper.py
tests/: test_activities.py  test_dbt_functionality.py
