[tool.poetry]
authors = ["Oracen <alex.stenlake@gmail.com>"]
description = "A tool for"
license = "MIT"
name = "temporal_dbt_python"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.7.2, <3.11.0"

dbt-core = ">=1.0.0"
dbt-postgres = {version = ">=1.0.0", optional = true}
dbt-redshift = {version = ">=1.0.0", optional = true}
dbt-snowflake = {version = ">=1.0.0", optional = true}
dbt-spark = {version = ">=1.0.0", optional = true}
temporalio = "^0.1b2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"

[tool.poetry.extras]
adapters = ["dbt-bigquery", "dbt-redshift", "dbt-postgres", "dbt-snowflake", "dbt-spark"]
postgres = ["dbt-postgres"]
redshift = ["dbt-redshift"]
snowflake = ["dbt-snowflake"]
spark = ["dbt-spark"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
